fix: Добавить валидацию полей EndpointHitDto, поменять тип переменной timestamp на LocalDateTime (валидация через @JsonFormat), удалить в POM модулей версию зависимостей

--- a/statistics/dto/pom.xml
+++ b/statistics/dto/pom.xml
@@ -16,12 +16,21 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
     </dependencies>
-
 </project>
