--- a/statistics/stats-service/src/main/resources/application.properties
+++ b/statistics/stats-service/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_stats
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #---
