--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -4,10 +4,12 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_main
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #---
