feat: реализовать функционал event... почти, наверное

--- a/statistics/stats-service/src/main/resources/application.properties
+++ b/statistics/stats-service/src/main/resources/application.properties
@@ -5,11 +5,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+#spring.mvc.format.date-time=iso
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_stats
+#.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_stats
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #---
