--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-stats-server.url=http://localhost:9090
+stats-server.url=http://stats-server:9090
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=none
@@ -10,8 +10,8 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_main
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_main
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #---
