--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-stats-server.url=http://stats-server:9090
+stats-server.url=${STATS_SERVER_URL}
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=none
@@ -8,15 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 
-#---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_main
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-#---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:ewm_main
-#spring.datasource.username=test
-#spring.datasource.password=test
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
