--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<modules>
 		<module>statistics</module>
 		<module>main-service</module>
+		<module>postman</module>
 	</modules>
 
 	<groupId>ru.practicum</groupId>
