--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8080
-#stats-server.url=${STATS_SERVER_URL}
-stats-server.url=http://localhost:9090
+stats-server.url=${STATS_SERVER_URL}
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=none
@@ -10,11 +9,6 @@ spring.sql.init.mode=always
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_main
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${POSTGRES_USER}
-#spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
