--- a/statistics/stats-service/src/main/resources/application.properties
+++ b/statistics/stats-service/src/main/resources/application.properties
@@ -7,11 +7,6 @@ spring.sql.init.mode=always
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_stats
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${POSTGRES_USER}
-#spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
